Add pkl & log to gitignore for the YoloV1 folder.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 .DS_Store
 .ipynb_checkpoints
 *.pt
-*/*.ipynb
-/*.ipynb
 *.ipynb
+
+WarmingUp_with_MNIST/*.ipynb
+
+YoloV1_Compagny_MealTrays/*.ipynb
+YoloV1_Compagny_MealTrays/*.pkl
+YoloV1_Compagny_MealTrays/*.log
 
 
 __pycache__/
