--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ WarmingUp_with_MNIST/*.ipynb
 YoloV1_Compagny_MealTrays/*.ipynb
 YoloV1_Compagny_MealTrays/*.pkl
 YoloV1_Compagny_MealTrays/*.log
+YoloV1_Compagny_MealTrays/logs/
+YoloV1_Compagny_MealTrays/models/
 
 
 __pycache__/
