Remove Handler from logging root.
This may cause the log not to be created !

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,7 +1,7 @@
 [MODEL]
-model_name = resnet
+model_name = testing
 in_channel = 3
-GRID_SIZE = 7 
+GRID_SIZE = 7
 NB_BOX = 2
 NB_CLASS = 8
 
@@ -24,10 +24,13 @@ DEVICE = cpu
 NB_EPOCHS = 150
 LEARNING_RATE = 0.0001
 LR_SCHEDULER = True
-BATCH_SIZE = 32
-DO_VALIDATION = True
+BATCH_SIZE = 6
+DO_VALIDATION = False
 WEIGHT_DECAY = 0.0005
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
 FREQ=8
+
+[PLOTS]
+PT_FILE = results/yoloPlato_darknet_150epochs_30102022_18h11.pt
