Add model weights and pickle files.

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,5 +1,5 @@
 [MODEL]
-model_name = testing
+model_name = darknet
 in_channel = 3
 GRID_SIZE = 7
 NB_BOX = 2
@@ -24,13 +24,17 @@ DEVICE = cpu
 NB_EPOCHS = 150
 LEARNING_RATE = 0.0001
 LR_SCHEDULER = True
-BATCH_SIZE = 6
-DO_VALIDATION = False
+BATCH_SIZE = 32
+DO_VALIDATION = True
 WEIGHT_DECAY = 0.0005
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
 FREQ=8
 
-[PLOTS]
-PT_FILE = results/yoloPlato_darknet_150epochs_30102022_18h11.pt
+[WEIGHTS]
+pt_file = yoloPlato_darknet_150epochs_01112022_18h19.pt
+
+[PICKLE]
+pkl_train = train_results_darknet_01112022_18h19.pkl
+pkl_val = val_results_darknet_01112022_18h19.pkl
