Change config.ini var name to lowercase.

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,17 +1,18 @@
 [MODEL]
 model_name = darknet
 in_channel = 3
-GRID_SIZE = 7
-NB_BOX = 2
-NB_CLASS = 8
+grid_size = 7
+nb_box = 2
+nb_class = 8
+pretrained = False
 
 [LOSS]
 lambd_coord = 5
 lambd_noobj = 0.5
 
 [SAVING]
-SAVE_MODEL = True
-SAVE_LOSS = True
+save_model = True
+save_loss = True
 
 [DATASET]
 isNormalize_trainset = True
@@ -20,17 +21,17 @@ isNormalize_valset = True
 isAugment_valset = False
 
 [TRAINING]
-DEVICE = cpu
-NB_EPOCHS = 150
-LEARNING_RATE = 0.0001
-LR_SCHEDULER = True
-BATCH_SIZE = 32
-DO_VALIDATION = True
-WEIGHT_DECAY = 0.0005
+device = cpu
+nb_epochs = 150
+learning_rate = 0.0001
+lr_scheduler = True
+batch_size = 32
+do_validation = True
+weight_decay = 0.0005
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
-FREQ=8
+freq=8
 
 [WEIGHTS]
 pt_file = yoloPlato_darknet_150epochs_01112022_18h19.pt
