Moving things and working on mAP/NMS

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,5 +1,5 @@
 [MODEL]
-model_name = darknet
+model_name = darknetTest
 in_channel = 3
 grid_size = 7
 nb_box = 2
@@ -12,7 +12,7 @@ lambd_noobj = 0.5
 
 [SAVING]
 save_model = True
-save_loss = True
+save_loss = False
 
 [DATASET]
 isNormalize_trainset = True
@@ -33,8 +33,9 @@ weight_decay = 0.0005
 [PRINTING]
 freq=8
 
+#results/yoloPlato_resnet101_150epochs_25102022_06h17.pt yoloPlato_darknet_150epochs_01112022_18h19
 [WEIGHTS]
-pt_file = yoloPlato_darknet_150epochs_01112022_18h19.pt
+pt_file = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
