Some updates and working on mAP/NMS

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -33,9 +33,9 @@ weight_decay = 0.0005
 [PRINTING]
 freq=8
 
-#results/yoloPlato_resnet101_150epochs_25102022_06h17.pt yoloPlato_darknet_150epochs_01112022_18h19
 [WEIGHTS]
-pt_file = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
+resnet_weights = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
+darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
