Add mAP feature.

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,5 +1,5 @@
 [MODEL]
-model_name = darknetTest
+model_name = darknet496fc
 in_channel = 3
 grid_size = 7
 nb_box = 2
@@ -12,7 +12,7 @@ lambd_noobj = 0.5
 
 [SAVING]
 save_model = True
-save_loss = False
+save_loss = True
 
 [DATASET]
 isNormalize_trainset = True
@@ -28,6 +28,10 @@ lr_scheduler = True
 batch_size = 32
 do_validation = True
 weight_decay = 0.0005
+
+[MAP]
+prob_threshold = 0.4
+iou_threshold = 0.5
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
