--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -26,7 +26,7 @@ nb_epochs = 150
 learning_rate = 0.0001
 lr_scheduler = True
 batch_size = 32
-do_validation = True
+do_validation = False
 weight_decay = 0.0005
 
 [MAP]
