--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,10 +1,11 @@
 [MODEL]
-model_name = darknet496fc
+model_name = yoloResnet50
 in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
-pretrained = False
+pretrained_resnet = True
+yoloResnet_checkpoint = False
 
 [LOSS]
 lambd_coord = 5
@@ -26,7 +27,7 @@ nb_epochs = 150
 learning_rate = 0.0001
 lr_scheduler = True
 batch_size = 32
-do_validation = False
+do_validation = True
 weight_decay = 0.0005
 
 [MAP]
@@ -38,8 +39,8 @@ iou_threshold = 0.5
 freq=8
 
 [WEIGHTS]
-resnet_weights = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
-darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19
+resnetYolo_weights = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
+darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
