--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,5 +1,5 @@
 [MODEL]
-model_name = yoloResnet50
+model_name = yoloResnet34
 in_channel = 3
 grid_size = 7
 nb_box = 2
@@ -39,7 +39,8 @@ iou_threshold = 0.5
 freq=8
 
 [WEIGHTS]
-resnetYolo_weights = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
+resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
+resnetYolo_weights = yoloPlato_yoloResnet50_150epochs_16112022_14h03.pt
 darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
 
 [PICKLE]
