Cleaning, renaming, deleting and working on plots.

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,11 +1,11 @@
 [MODEL]
-model_name = yoloResnet34
+model_name = yoloResnet152
 in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
-pretrained_resnet = True
-yoloResnet_checkpoint = False
+pretrained_resnet = False
+yoloResnet_checkpoint = True
 
 [LOSS]
 lambd_coord = 5
@@ -23,24 +23,24 @@ isAugment_valset = False
 
 [TRAINING]
 device = cpu
-nb_epochs = 150
-learning_rate = 0.0001
-lr_scheduler = True
+nb_epochs = 50
+learning_rate = 0.001
+lr_scheduler = False
 batch_size = 32
 do_validation = True
 weight_decay = 0.0005
 
 [MAP]
-prob_threshold = 0.4
+prob_threshold = 0.3
 iou_threshold = 0.5
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
-freq=8
+freq=10
 
 [WEIGHTS]
 resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
-resnetYolo_weights = yoloPlato_yoloResnet50_150epochs_16112022_14h03.pt
+resnetYolo_weights = models/yoloResnet152CHECKPOINT___101epochs_18112022_05h14.pt.pt
 darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
 
 [PICKLE]
