Edits to work on MPS

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,11 +1,11 @@
 [MODEL]
-model_name = yoloResnet152
+model_name = yoloResnet152_test
 in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
-pretrained_resnet = False
-yoloResnet_checkpoint = True
+pretrained_resnet = True
+yoloResnet_checkpoint = False
 
 [LOSS]
 lambd_coord = 5
@@ -22,10 +22,10 @@ isNormalize_valset = True
 isAugment_valset = False
 
 [TRAINING]
-device = cpu
-nb_epochs = 50
-learning_rate = 0.001
-lr_scheduler = False
+device = mps
+nb_epochs = 100
+learning_rate = 0.0001
+lr_scheduler = True
 batch_size = 32
 do_validation = True
 weight_decay = 0.0005
