--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -40,7 +40,7 @@ freq=10
 
 [WEIGHTS]
 resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
-resnetYolo_weights = models/yoloResnet152CHECKPOINT___101epochs_18112022_05h14.pt.pt
+resnetYolo_weights = yoloResnet152_testCHECKPOINT__51epochs_11122022_13h34.pt
 darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
 
 [PICKLE]
