--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,5 +1,5 @@
 [MODEL]
-model_name = yoloResnet152_test
+model_name = yoloResnet152small
 in_channel = 3
 grid_size = 7
 nb_box = 2
@@ -24,14 +24,14 @@ isAugment_valset = False
 [TRAINING]
 device = mps
 nb_epochs = 50
-learning_rate = 0.0001
-lr_scheduler = True
-batch_size = 64
+learning_rate = 0.001
+lr_scheduler = False
+batch_size = 32
 do_validation = True
 weight_decay = 0.0005
 
 [MAP]
-prob_threshold = 0.3
+prob_threshold = 0.5
 iou_threshold = 0.5
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
