Programming mealtrays_dataset with albumentations

--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,11 +1,11 @@
 [MODEL]
-model_name = yoloResnet152small
+model_name = yoloEfficientNetB4
 in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
 pretrained_resnet = True
-yoloResnet_checkpoint = False
+yoloResnet_checkpoint = True
 
 [LOSS]
 lambd_coord = 5
@@ -16,15 +16,15 @@ save_model = True
 save_loss = True
 
 [DATASET]
-isNormalize_trainset = True
+isNormalize_trainset = False
 isAugment_trainset = True
-isNormalize_valset = True
+isNormalize_valset = False
 isAugment_valset = False
 
 [TRAINING]
 device = mps
 nb_epochs = 50
-learning_rate = 0.001
+learning_rate = 0.00005
 lr_scheduler = False
 batch_size = 32
 do_validation = True
@@ -36,12 +36,13 @@ iou_threshold = 0.5
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
-freq=10
+freq=25
 
 [WEIGHTS]
 resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
 resnetYolo_weights = yoloResnet152_testCHECKPOINT__51epochs_11122022_13h34.pt
 darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
+efficientnet_weights = yoloEfficientNetB4_43epochs_05052023_20h33.pt
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
