--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -4,8 +4,8 @@ in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
-pretrained_resnet = True
-yoloResnet_checkpoint = True
+pretrained = True
+yoloModel_checkpoint = True
 
 [LOSS]
 lambd_coord = 5
@@ -16,15 +16,15 @@ save_model = True
 save_loss = True
 
 [DATASET]
-isNormalize_trainset = False
+isNormalize_trainset = True
 isAugment_trainset = True
-isNormalize_valset = False
+isNormalize_valset = True
 isAugment_valset = False
 
 [TRAINING]
 device = mps
-nb_epochs = 50
-learning_rate = 0.00005
+nb_epochs = 10
+learning_rate = 0.0005
 lr_scheduler = False
 batch_size = 32
 do_validation = True
@@ -36,13 +36,13 @@ iou_threshold = 0.5
 
 ### printing occurs at batch number 0, len(dataloader) and batch+1%FREQ 
 [PRINTING]
-freq=25
+freq=30
 
 [WEIGHTS]
 resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
 resnetYolo_weights = yoloResnet152_testCHECKPOINT__51epochs_11122022_13h34.pt
 darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
-efficientnet_weights = yoloEfficientNetB4_43epochs_05052023_20h33.pt
+efficientnet_weights = yoloEfficientNetB4_21epochs_08052023_20h05.pt
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
