--- a/YoloV1_Compagny_MealTrays/config.ini
+++ b/YoloV1_Compagny_MealTrays/config.ini
@@ -1,11 +1,11 @@
 [MODEL]
-model_name = yoloEfficientNetB4
+model_name = yoloEfficientNetB5
 in_channel = 3
 grid_size = 7
 nb_box = 2
 nb_class = 8
 pretrained = True
-yoloModel_checkpoint = True
+yoloModel_checkpoint = False
 
 [LOSS]
 lambd_coord = 5
@@ -24,7 +24,7 @@ isAugment_valset = False
 [TRAINING]
 device = mps
 nb_epochs = 10
-learning_rate = 0.000001
+learning_rate = 0.0001
 lr_scheduler = False
 batch_size = 32
 do_validation = True
@@ -39,10 +39,7 @@ iou_threshold = 0.5
 freq=30
 
 [WEIGHTS]
-resnetYolo_weights_old = results/yoloPlato_resnet101_150epochs_25102022_06h17.pt
-resnetYolo_weights = yoloResnet152_testCHECKPOINT__51epochs_11122022_13h34.pt
-darknet_weights = results/yoloPlato_darknet_150epochs_01112022_18h19.pt
-efficientnet_weights = yoloEfficientNetB4_128epochs_09052023_11h32.pt
+efficientnet_weights = yoloEfficientNetB5_72epochs_11052023_13h54.pt
 
 [PICKLE]
 pkl_train = train_results_darknet_01112022_18h19.pkl
